--- a/css/main.css
+++ b/css/main.css
@@ -1979,7 +1979,9 @@ div#resize:hover {
     line-height: 27px;
     font-size: 1.5em;
 }
+range-box {
 
+}
 ul.numbers {
     display: block;
     margin: 10px -20px;
@@ -2031,6 +2033,7 @@ ul.numbers li:first-child:after, ul.numbers li:last-child:after {
 .handle {
     position: absolute;
     top: -4px;
+    margin-left:-8px ;
     width: 16px;
     height: 16px;
     background: url(../img/options.png) no-repeat -400px 0;
