--- a/css/main.css
+++ b/css/main.css
@@ -2066,7 +2066,7 @@ ul.numbers li:first-child:after, ul.numbers li:last-child:after {
     top: 0;
     left: 0;
     height: 16px;
-    background: #006699;
+    background: #c9a217;
     border-radius: 2px;
     opacity: .3;
 }
