--- a/css/main.css
+++ b/css/main.css
@@ -2053,7 +2053,7 @@ ul.numbers li:first-child:after, ul.numbers li:last-child:after {
     display: block;
     width: 100%;
     height: 16px;
-    background-color: rgba(0, 0, 0, .05);
+    background: rgba(255, 255, 255, 1);
     border-radius: 2px;
     text-align: center;
     z-index: 100;
@@ -2066,13 +2066,16 @@ ul.numbers li:first-child:after, ul.numbers li:last-child:after {
     top: 0;
     left: 0;
     height: 16px;
-    background: #c9a217;
+    background: rgba(192, 0, 0, .15);
     border-radius: 2px;
-    opacity: .3;
+    z-index: -2;
 }
 
 .mark.recd {
+    top:-3px;
+    height:3px;
     background: #0b8d0e;
+    z-index: -1;
 }
 
 .country-selected thead td {
