--- a/css/main.css
+++ b/css/main.css
@@ -2052,29 +2052,38 @@ ul.numbers li:first-child:after, ul.numbers li:last-child:after {
     position: relative;
     display: block;
     width: 100%;
-    height: 16px;
+    height: 18px;
     background: rgba(255, 255, 255, 1);
     border-radius: 2px;
     text-align: center;
+    overflow: hidden;
     z-index: 100;
-    font-weight: bold;
 }
-
+.mark-box .text {
+    display: inline-block;
+    padding:0 5px;
+    height: 18px;
+    line-height: 18px;
+    font-family: "Tahoma";
+    font-size: .8em;
+}
 .mark {
     display: block;
     position: absolute;
     top: 0;
     left: 0;
-    height: 16px;
-    background: rgba(192, 0, 0, .15);
+    height: 18px;
+    background: #FF6600;
     border-radius: 2px;
+    opacity: .22;
     z-index: -2;
 }
 
 .mark.recd {
-    top:-3px;
-    height:3px;
+    top:16px;
+    height:2px;
     background: #0b8d0e;
+    opacity: 1;
     z-index: -1;
 }
 
